--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Контакт</a></li>
 				</ul>
 			</nav>
 
