--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="blog.html">Блог</a></li>
 					<li><a href="contact.html">Контакт</a></li>
 				</ul>
 			</nav>
